<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_home">Главная</string>
    <string name="like">Like</string>
    <string name="title_profile">Профиль</string>
    <string name="log_in">Log In</string>
    <string name="sing_up">Sing Up</string>
    <string name="yNumber">Enter Your Phone Number</string>
    <string name="yDescription">Enter Complex Description</string>
    <string name="btnSave">Save</string>
    <string name="email">Email or User Name</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="telegram">Enter Your Telegram</string>
    <string name="phone_number">Enter Your Number</string>
    <string name="complex">Enter Complex Name</string>
    <string name="desc">About Complex</string>
    <string name="description">Enter Description</string>
    <string name="userLog">User LogIn</string>
    <string name="or">OR</string>
    <string name="take_picture">Take Picture</string>
    <string name="take_picture_description">Camera picture for sample app</string>
    <string name="ok_button_title">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>