<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp"
    tools:context=".ui.user.AuthenticationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/switch_tumbs"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/logIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/switch_trcks"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/log_in"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />

                    <TextView
                        android:id="@+id/singUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/sing_up"
                        android:textAlignment="center"
                        android:textColor="@color/pinkColor"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logInLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/eMail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName|textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/singIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/log_in"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="17sp"
                        app:backgroundTint="@color/pinkColor"
                        app:shapeAppearanceOverlay="@style/Button5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/singUpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/userLog"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_logIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName|textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/e_mail"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/registerBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="Register"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="17sp"
                        app:backgroundTint="@color/pinkColor"
                        app:shapeAppearanceOverlay="@style/Button5" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="#474646"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_google" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_twitter" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
